styles: fixed dark mode styling

--- a/styles/Column.module.css
+++ b/styles/Column.module.css
@@ -9,7 +9,7 @@
     font-size: 24px;
     letter-spacing: -.02em;
     line-height: 1;
-    color: var(--accents-6);
+    color: var(--column-text);
 }
 
 .column>p {
